eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/AffordabilityResults__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalRentalIncome__c</fullName>
        <label>AdditionalRentalIncome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AffordabilityNetMonthlyIncome__c</fullName>
        <label>AffordabilityNetMonthlyIncome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AffordabilityPercentage__c</fullName>
        <label>AffordabilityPercentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AffordabilityResult__c</fullName>
        <label>AffordabilityResult</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BudgetPlannerResult__c</fullName>
        <label>BudgetPlannerResult</label>
        <picklist>
            <picklistValues>
                <fullName>Surplus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deficit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BudgetPlannerSurplusOrDeficit__c</fullName>
        <label>BudgetPlannerSurplusOrDeficit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetPlannerTotal__c</fullName>
        <label>BudgetPlannerTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DependantsApplicant1__c</fullName>
        <label>DependantsApplicant1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DependantsApplicant2__c</fullName>
        <label>DependantsApplicant2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DependantsApplicant3__c</fullName>
        <label>DependantsApplicant3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTI__c</fullName>
        <formula>Opportunity__r.FTI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinanceRequired__c</fullName>
        <label>FinanceRequired</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossAnnualIncomeApplicant1__c</fullName>
        <label>GrossAnnualIncomeApplicant1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossAnnualIncomeApplicant2__c</fullName>
        <label>GrossAnnualIncomeApplicant2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossAnnualIncomeApplicant3__c</fullName>
        <label>GrossAnnualIncomeApplicant3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncomeMultiplier4_5Total__c</fullName>
        <inlineHelpText>Income multiplier calculated by 4.5 gross income of primary applicant</inlineHelpText>
        <label>IncomeMultiplier4.5Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncomeMultiplier5_1__c</fullName>
        <inlineHelpText>Income multiplier 5 primary and 1 secondary</inlineHelpText>
        <label>IncomeMultiplier5+1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncomeMultiplierHigherAmount__c</fullName>
        <label>IncomeMultiplierHigherAmount</label>
        <picklist>
            <picklistValues>
                <fullName>4.5 Primary Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Primary plus 1 Joint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IncomeMultiplierResult__c</fullName>
        <label>IncomeMultiplierResult</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NetMonthlyIncomeApplicant1__c</fullName>
        <label>NetMonthlyIncomeApplicant1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMonthlyIncomeApplicant2__c</fullName>
        <label>NetMonthlyIncomeApplicant2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMonthlyIncomeApplicant3__c</fullName>
        <label>NetMonthlyIncomeApplicant3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfApplicants__c</fullName>
        <label>NumberOfApplicants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>AffordabilityResults</relationshipLabel>
        <relationshipName>AffordabilityResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_Market_Value__c</fullName>
        <label>Purchase Price/Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Result_used_for_assessment__c</fullName>
        <formula>IF(Opportunity__r.HPP_extended_opportunity__r.Latest_PreVal_Decision_Date__c  &lt;   DATEVALUE(CreatedDate) , &quot;NO&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result used for assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StressedHPPRepaymentUsingRevertRate__c</fullName>
        <label>StressedHPPRepaymentUsingRevertRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StressedHPPRepayment__c</fullName>
        <inlineHelpText>HPP Monthly repayment stressed at 2%</inlineHelpText>
        <label>StressedHPPRepayment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TermOfFinance__c</fullName>
        <label>TermOfFinance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAfterSchoolReligiousInstruction__c</fullName>
        <label>TotalAfterSchoolReligiousInstruction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalBirthdaysCelebrationsPresents__c</fullName>
        <label>TotalBirthdaysCelebrationsPresents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalBreakdownService__c</fullName>
        <label>TotalBreakdownService</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalBuildingInsurance__c</fullName>
        <label>TotalBuildingInsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCarInsurance__c</fullName>
        <label>TotalCarInsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCarServicing__c</fullName>
        <label>TotalCarServicing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCarTax__c</fullName>
        <label>TotalCarTax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCharitableDonations__c</fullName>
        <label>TotalCharitableDonations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalClothing__c</fullName>
        <label>TotalClothing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCommitments__c</fullName>
        <label>TotalCommitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalContentsInsurance__c</fullName>
        <label>TotalContentsInsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCouncilTax__c</fullName>
        <label>TotalCouncilTax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalElectricity__c</fullName>
        <label>TotalElectricity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFood__c</fullName>
        <label>TotalFood</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalGaming__c</fullName>
        <label>TotalGaming</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalGas__c</fullName>
        <label>TotalGas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalGoingOut__c</fullName>
        <label>TotalGoingOut</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalGrossIncome__c</fullName>
        <formula>GrossAnnualIncomeApplicant1__c  +  GrossAnnualIncomeApplicant2__c  +  GrossAnnualIncomeApplicant3__c  +  GrossAnnualIncomeApplicant4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalGymHealthClub__c</fullName>
        <label>TotalGymHealthClub</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalHealthInsurance__c</fullName>
        <label>TotalHealthInsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalHolidays__c</fullName>
        <label>TotalHolidays</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalHomeTelephone__c</fullName>
        <label>TotalHomeTelephone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalIncomeProtection__c</fullName>
        <label>TotalIncomeProtection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalInternet__c</fullName>
        <label>TotalInternet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLifeInsurance__c</fullName>
        <label>TotalLifeInsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMobilePhone__c</fullName>
        <label>TotalMobilePhone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMonthlyDebtRepayment__c</fullName>
        <label>TotalMonthlyDebtRepayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalNetMonthlyIncome__c</fullName>
        <label>TotalNetMonthlyIncome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfDependants__c</fullName>
        <label>TotalNumberOfDependants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOtherCommitments__c</fullName>
        <label>TotalOtherCommitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPetExpenses__c</fullName>
        <label>TotalPetExpenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPetrolDiesel__c</fullName>
        <label>TotalPetrolDiesel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRegularInvestments__c</fullName>
        <label>TotalRegularInvestments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSchoolFees__c</fullName>
        <label>TotalSchoolFees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSkyCableOther__c</fullName>
        <label>TotalSkyCableOther</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSportingTickets__c</fullName>
        <label>TotalSportingTickets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSubscriptions__c</fullName>
        <label>TotalSubscriptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTVLicence__c</fullName>
        <label>TotalTVLicence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTravelExpenses__c</fullName>
        <label>TotalTravelExpenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTravelInsurance__c</fullName>
        <label>TotalTravelInsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalWater__c</fullName>
        <label>TotalWater</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Income__c</fullName>
        <formula>GrossAnnualIncomeApplicant1__c  +  GrossAnnualIncomeApplicant2__c  +  GrossAnnualIncomeApplicant3__c  +  GrossAnnualIncomeApplicant4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_Affordability__c</fullName>
        <formula>(StressedHPPRepayment__c/2)*3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3% Affordability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>AffordabilityResults</label>
    <nameField>
        <displayFormat>AFR{0000}</displayFormat>
        <label>AffordabilityResults Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AffordabilityResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>